update old popups

--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -1,11 +1,13 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-1">
 
-    <div class="pmx-field-handlers">
-      <div class="pmx-field-handlers__errors">
+    <div class="pmx-field__handlers">
+      <div class="pmx-field__handler pmx-field__handler--error">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
-      <div class="pmx-field-handlers__actions">
+      <div class="pmx-field__handler pmx-field__handler--action">
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
-      <div class="pmx-field-handlers__tooltip">
+      <div class="pmx-field__handler pmx-field__handler--tooltip">
         <p>Actual invoice amount</p>
         <p>For fixed price projects and service requests (no timesheets): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
       </div>
@@ -32,7 +34,80 @@
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
             <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Not started</div>
+              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+
+                <div class="pmx-field">
+                  <div class="pmx-field__inner">
+                    <div class="pmx-field__value">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector__item">
+                          <div class="pmx-selector__block">
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #ff9b9b">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+              <div class="itemBoxTable__bodyCellInner">
+                <i class="itemBoxTable__action itemBoxTable__action--add">✓</i>
+              </div>
+            </li>
+          </ul>
+          <ul class="itemBoxTable__bodyRow JS_filterableCell">
+            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+
+                <div class="pmx-field">
+                  <div class="pmx-field__inner">
+                    <div class="pmx-field__value">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector__item">
+                          <div class="pmx-selector__block">
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+              <div class="itemBoxTable__bodyCellInner">
+                <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+              </div>
+            </li>
+          </ul>
+          <ul class="itemBoxTable__bodyRow JS_filterableCell">
+            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+
+                <div class="pmx-field">
+                  <div class="pmx-field__inner">
+                    <div class="pmx-field__value">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector__item">
+                          <div class="pmx-selector__block">
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">On hold</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
@@ -42,17 +117,24 @@
           </ul>
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
             <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Ongoing</div>
-            </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
-              <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--add">✓</i>
+              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+
+                <div class="pmx-field">
+                  <div class="pmx-field__inner">
+                    <div class="pmx-field__value">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector__item">
+                          <div class="pmx-selector__block">
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Finished</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
-            </li>
-          </ul>
-          <ul class="itemBoxTable__bodyRow JS_filterableCell">
-            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Done</div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
