--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -28,14 +28,9 @@
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--selectedText">
-              <i>Selected</i>
+              <i class="itemBoxTable__action--toggle">ऄ Selected</i>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -50,23 +45,30 @@
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle JS_itemBoxTable__bodyCellInner--text">
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded">
-                          <div class="pmx-selector__item pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                        <div class="pmx-field__value">
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                            <div class="pmx-selector__item">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    dev-team
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -84,22 +86,29 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded">
-                          <div class="pmx-selector__item pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+                        <div class="pmx-field__value">
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                            <div class="pmx-selector__item">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    back-end
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -117,22 +126,29 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded">
-                          <div class="pmx-selector__item pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                        <div class="pmx-field__value">
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                            <div class="pmx-selector__item">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">282
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    282
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -153,14 +169,9 @@
         <!-- /.itemBox -->
 
         <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-            <div class="itemBoxTable__bodyCellInner">
-              All
+              <i class="itemBoxTable__action--toggle">ऄ All</i>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -181,22 +192,29 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded">
-                          <div class="pmx-selector__item pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                        <div class="pmx-field__value">
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                            <div class="pmx-selector__item">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">282
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    282
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
@@ -210,22 +228,29 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded">
-                          <div class="pmx-selector__item pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
+                        <div class="pmx-field__value">
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                            <div class="pmx-selector__item">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">297
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    297
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
@@ -239,22 +264,29 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded">
-                          <div class="pmx-selector__item pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                        <div class="pmx-field__value">
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                            <div class="pmx-selector__item">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    dev-team
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
@@ -268,22 +300,29 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded">
-                          <div class="pmx-selector__item pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+                        <div class="pmx-field__value">
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                            <div class="pmx-selector__item">
+                              <div class="pmx-selector__block">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    back-end
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
