text in action for tab 2 smarlists

--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -14,7 +14,7 @@
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
                 <div class="itemBoxTable__bodyCellInner">
 
-                  <i class="itemBoxTable__action">ञ</i>
+                  <i class="">ञ</i>
 
                 </div>
             </li>
@@ -27,13 +27,10 @@
     <div class="itemBoxTable">
       <div class="itemBoxTable__body">
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">ऄ</i>
+              <i class="">ऄ My private smartlists</i>
             </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">My private smartlists</div>
           </li>
         </ul>
         <div class="itemBox itemBox--children">
@@ -169,13 +166,10 @@
           </div>
         </div><!-- /.itemBox--children -->
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">ऄ</i>
+              <i class="">ऄ My shared smartlists</i>
             </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">My shared smartlists</div>
           </li>
         </ul>
         <div class="itemBox itemBox--children">
@@ -290,13 +284,10 @@
           </div>
         </div><!-- /.itemBox--children -->
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">ऄ</i>
+              <i class="">ऄ Smartlists shared with me</i>
             </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">Smartlists shared with me</div>
           </li>
         </ul>
         <div class="itemBox itemBox--children">
