Color-sublist: added new design for text

--- a/_includes/blocks/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/ms-tags-colors-color-sublist.html
@@ -19,8 +19,14 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
-            Silver
-          </div>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
+                        Silver
+                      </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
@@ -41,8 +47,19 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
-            Deep Blue Sky
-          </div>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
+                        Deep Blue Sky
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
@@ -63,8 +80,19 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
-            Malachite
-          </div>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
+                        Malachite
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
@@ -85,8 +113,19 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
-            Saffron
-          </div>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
+                        Saffron
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
@@ -107,8 +146,19 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
-            Dark Goldenrod
-          </div>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
+                        Dark Goldenrod
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
@@ -129,8 +179,19 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
-            Cadmium Red
-          </div>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
+                        Cadmium Red
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
@@ -151,10 +212,21 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
-            Jet
-          </div>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
+                        Jet
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </li>
       </ul>
-    </div>
-  </div>
-</div>
+      </div>
+      </div>
+      </div>
